[tool.poetry]
name = "trustpilot"
version = "8.0.0"
description = "trustpilot api client including cli tool"
authors = [
    "Johannes Valbjørn <jgv@trustpilot.com>",
    "Thomas Thiebaud <tht@trustpilot.com>"
]
readme = "README.md"
repository = "https://github.com/trustpilot/python-trustpilot"
license = "MIT"
keywords = ["trustpilot", "api", "client"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.1"
requests = "^2.23.0"
aiohttp = "^3.6.2"
async_generator = "^1.10"

[tool.poetry.dev-dependencies]
responses = "^0.10.12"
mock = "^4.0.2"
pytest = "^5.4.1"
pytest-readme = "^1.0.0"
aioresponses = "^0.6.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
