[tool.poetry]
name = "trustpilot"
version = "8.1.0"
description = "trustpilot api client including cli tool"
authors = [
    "Johannes Valbjørn <jgv@trustpilot.com>",
    "Thomas Thiebaud <tht@trustpilot.com>"
]
readme = "README.md"
repository = "https://github.com/trustpilot/python-trustpilot"
license = "MIT"
keywords = ["trustpilot", "api", "client"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.1"
requests = "^2.23.0"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
responses = "^0.10.12"
mock = "^4.0.2"
pytest = "^5.4.1"
aioresponses = "^0.6.3"
black = "^19.10b0"

[tool.poetry.scripts]
trustpilot_api_client = 'trustpilot.cli:cli'


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
