[tool.poetry]
name = "trustpilot"
version = "10.0.0"
description = "trustpilot api client including cli tool"
authors = [
    "Johannes Valbjørn <jgv@trustpilot.com>",
    "Thomas Thiebaud <tht@trustpilot.com>",
    "John Sutherland <johns@trustpilot.com>",
]
readme = "README.md"
repository = "https://github.com/trustpilot/python-trustpilot"
license = "MIT"
keywords = ["trustpilot", "api", "client"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.6"
requests = "^2.31.0"
aiohttp = "^3.8.5"

[tool.poetry.dev-dependencies]
responses = "^0.23.2"
mock = "^5.1.0"
pytest = "^7.4.0"
aioresponses = "^0.7.4"
black = "^23.7.0"

[tool.poetry.scripts]
trustpilot_api_client = 'trustpilot.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
